directives and assignment2

--- a/first-angular/src/app/components/body/body.component.html
+++ b/first-angular/src/app/components/body/body.component.html
@@ -1,3 +1,6 @@
 <app-databinding></app-databinding>
 <app-assignment1 />
 <app-directives></app-directives>
+<app-assignment2 />
+<app-products></app-products>
+<!--<app-iplplayers></app-iplplayers>-->
