directives-employeecrud-custompipes

--- a/first-angular/src/app/components/body/body.component.html
+++ b/first-angular/src/app/components/body/body.component.html
@@ -4,3 +4,7 @@
 <app-assignment2 />
 <app-products></app-products>
 <!--<app-iplplayers></app-iplplayers>-->
+<app-my-modal></app-my-modal>
+<app-sweetalert-demo></app-sweetalert-demo>
+<app-employeecrud></app-employeecrud>
+<app-pipes></app-pipes>
