--- a/first-angular/src/app/components/databinding/databinding.component.html
+++ b/first-angular/src/app/components/databinding/databinding.component.html
@@ -78,6 +78,13 @@
     <div>Addition of {{ num1 }} and {{ num2 }} is {{ +num1 + +num2 }}</div>
   </div>
 
+  <div class="m-2 border">
+    <label>User Name</label>
+    <input [(ngModel)]="no1" />
+    <input [(ngModel)]="no222" />
+    <h3>Addition {{ no1 }} and {{ no222 }} is {{ +no1 + +no222 }}</h3>
+  </div>
+
   <div class="p-2 m-2 border">
     <div>Addition</div>
     <input #mybox1 />
