custom pipes assignment

--- a/first-angular/src/app/components/body/body.component.html
+++ b/first-angular/src/app/components/body/body.component.html
@@ -8,3 +8,4 @@
 <app-sweetalert-demo></app-sweetalert-demo>
 <app-employeecrud></app-employeecrud>
 <app-pipes></app-pipes>
+<app-pipeassignment4></app-pipeassignment4>
