Data commuincation between two components

--- a/first-angular/src/app/components/body/body.component.html
+++ b/first-angular/src/app/components/body/body.component.html
@@ -9,3 +9,4 @@
 <app-employeecrud></app-employeecrud>
 <app-pipes></app-pipes>
 <app-pipeassignment4></app-pipeassignment4>
+<app-parent></app-parent>
