--- a/first-angular/src/app/components/categories/categories.component.html
+++ b/first-angular/src/app/components/categories/categories.component.html
@@ -51,3 +51,11 @@
     </div>
   </div>
 </div>
+
+<!-- <div class="container">
+  <div class="row">
+    @for(item of allCategories; track $index){
+    <app-category-item []="category"></app-category-item>
+    }
+  </div>
+</div> -->
