data communication between parent to child

--- a/first-angular/src/app/components/body/body.component.html
+++ b/first-angular/src/app/components/body/body.component.html
@@ -10,3 +10,4 @@
 <app-pipes></app-pipes>
 <app-pipeassignment4></app-pipeassignment4>
 <app-parent></app-parent>
+<app-assignment5></app-assignment5>
