--- a/first-angular/src/app/components/category-item/category-item.component.html
+++ b/first-angular/src/app/components/category-item/category-item.component.html
@@ -1,1 +1,4 @@
-<p>category-item works!</p>
+<div class="category text-center">
+  <img src="{{ categoryObj.img_url }}" alt="img" />
+  <div>{{ categoryObj.label }}</div>
+</div>
