--- a/first-angular/src/app/components/categories/categories.component.html
+++ b/first-angular/src/app/components/categories/categories.component.html
@@ -59,3 +59,13 @@
     }
   </div>
 </div> -->
+<!-- Category Data Communication from Parent to Child-->
+<!--<div class="container">
+  <div class="row">
+    @for(category of allCategories; track $index){
+    <div class="col">
+      <app-category-item [categoryObj]="category"></app-category-item>
+    </div>
+    }
+  </div>
+</div>-->
