--- a/first-angular/src/app/components/body/body.component.html
+++ b/first-angular/src/app/components/body/body.component.html
@@ -1,13 +1,16 @@
-<app-databinding></app-databinding>
-<app-assignment1 />
-<app-directives></app-directives>
-<app-assignment2 />
-<app-products></app-products>
+<!-- <app-databinding></app-databinding> -->
+<!-- <app-assignment1 /> -->
+<!-- <app-directives></app-directives> -->
+<!-- <app-assignment2 /> -->
+<!-- <app-products></app-products> -->
 <!--<app-iplplayers></app-iplplayers>-->
-<app-my-modal></app-my-modal>
-<app-sweetalert-demo></app-sweetalert-demo>
-<app-employeecrud></app-employeecrud>
-<app-pipes></app-pipes>
-<app-pipeassignment4></app-pipeassignment4>
-<app-parent></app-parent>
-<app-assignment5></app-assignment5>
+<!-- <app-my-modal></app-my-modal> -->
+<!-- <app-sweetalert-demo></app-sweetalert-demo> -->
+<!-- <app-employeecrud></app-employeecrud> -->
+<!-- <app-pipes></app-pipes> -->
+<!-- <app-pipeassignment4></app-pipeassignment4> -->
+<!-- <app-parent></app-parent> -->
+<!-- <app-assignment5></app-assignment5> -->
+<app-math1></app-math1>
+<hr />
+<app-math2></app-math2>
