angular service assignment6

--- a/first-angular/src/app/components/databinding/databinding.component.html
+++ b/first-angular/src/app/components/databinding/databinding.component.html
@@ -17,6 +17,7 @@
   <img src="{{ imgFavUrl1 }}" alt="prabhas" width="250" height="300" />
   <img [src]="imgFavUrl" alt="prabhas" width="250" height="300" />
   <img bind-src="imgFavUrl2" alt="prabhas" width="250" height="300" />
+  <img bind-src="imgFavUrl3" alt="prabhas" width="250" height="300" />
   <div class="mt-3">
     1 way data Binding <input type="text" value="{{ favActor }}" />
   </div>
