--- a/first-angular/src/app/components/directives/directives.component.html
+++ b/first-angular/src/app/components/directives/directives.component.html
@@ -59,7 +59,7 @@
 </div>
 
 <div class="border p-2 m-2">
-  <h3>Country List Dropdown</h3>
+  <h3>Country List DataList</h3>
   <input list="states" />
   <datalist id="states">
     @for(state of stateNames; track $index){
