--- a/first-angular/src/app/components/pipes/pipes.component.html
+++ b/first-angular/src/app/components/pipes/pipes.component.html
@@ -25,7 +25,7 @@
   <div>Short Date: {{ today | date : "shortDate" }}</div>
   <div>Medium Date: {{ today | date : "mediumDate" }}</div>
   <div>Long Date: {{ today | date : "longDate" }}</div>
-  <div>Date: {{ today | date : "fullDate" }}</div>
+  <div>Full Date: {{ today | date : "fullDate" }}</div>
   <div>Long Time: {{ today | date : "longTime" }}</div>
   <div>Full Time: {{ today | date : "fullTime" }}</div>
   <div>Date Format: {{ today | date : "dd/MM/yyyy" }}</div>
