--- a/first-angular/src/app/components/body/body.component.html
+++ b/first-angular/src/app/components/body/body.component.html
@@ -1,16 +1,51 @@
 <app-databinding></app-databinding>
-<app-assignment1 />
-<app-directives></app-directives>
-<app-assignment2 />
-<app-products></app-products>
+<!-- <app-assignment1 /> -->
+<!-- <app-directives></app-directives> -->
+<!-- <app-assignment2 /> -->
+<!-- <app-products></app-products> -->
 <!-- <app-iplplayers></app-iplplayers> -->
-<app-my-modal></app-my-modal>
-<app-sweetalert-demo></app-sweetalert-demo>
-<app-employeecrud></app-employeecrud>
-<app-pipes></app-pipes>
-<app-pipeassignment4></app-pipeassignment4>
-<app-parent></app-parent>
-<app-assignment5></app-assignment5>
-<app-math1></app-math1>
-<app-math2></app-math2>
-<app-assignment6></app-assignment6>
+<!-- <app-my-modal></app-my-modal> -->
+<app-my-modal2>
+  <h3>Prabahas Salaar</h3>
+  <img
+    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4Rn_hO9SUcQQ7Nsqm6ZbR50srMe-bYtVkfA&s"
+    alt="Prabhas"
+    class="img-fluid"
+  />
+</app-my-modal2>
+<!-- <app-sweetalert-demo></app-sweetalert-demo> -->
+<!-- <app-employeecrud></app-employeecrud> -->
+<!-- <app-pipes></app-pipes> -->
+<!-- <app-pipeassignment4></app-pipeassignment4> -->
+<!-- <app-parent></app-parent> -->
+<!-- <app-traffic-light></app-traffic-light> -->
+<!-- <app-assignment5></app-assignment5> -->
+<!-- <app-math1></app-math1> -->
+<!-- <app-math2></app-math2> -->
+<!-- <app-assignment6></app-assignment6> -->
+<!-- <app-http-demo></app-http-demo> -->
+<!-- <app-assignment7></app-assignment7> -->
+<!-- <app-http-demo2></app-http-demo2> -->
+<!-- <app-observable-demo1></app-observable-demo1> -->
+<!-- <app-observable-demo2></app-observable-demo2> -->
+<!-- <app-observable-demo3></app-observable-demo3> -->
+<!-- <app-observable-demo4></app-observable-demo4> -->
+<div class="border p-2 m-2">
+  <h4 class="text-center">Observables and Subjects</h4>
+  <div class="row">
+    <div class="col-sm-3">
+      <app-message1></app-message1>
+    </div>
+    <div class="col-sm-3">
+      <app-message2></app-message2>
+    </div>
+    <div class="col-sm-3">
+      <app-message-add></app-message-add>
+    </div>
+  </div>
+</div>
+<app-subject-demo1></app-subject-demo1>
+<app-signal-demo1></app-signal-demo1>
+<app-signal-demo2></app-signal-demo2>
+<app-signal-demo3></app-signal-demo3>
+<app-assignment-8></app-assignment-8>
