--- a/first-angular/src/app/components/sweetalert-demo/sweetalert-demo.component.html
+++ b/first-angular/src/app/components/sweetalert-demo/sweetalert-demo.component.html
@@ -1,5 +1,5 @@
 <div class="border p-2 m-2">
-  <h3 class="text-center">Let's Learn NPM Packages</h3>
+  <h3 class="text-center">Let's Learn Sweet Alert and Snack bar</h3>
   <button class="btn btn-warning p-2" (click)="openAlert()">Sweet Alert</button>
   <button class="btn btn-success m-2 p-2" (click)="openSnackBar()">
     Snack Bar
