forms and different types

--- a/first-angular/src/app/components/body/body.component.html
+++ b/first-angular/src/app/components/body/body.component.html
@@ -49,3 +49,6 @@
 <app-signal-demo2></app-signal-demo2>
 <app-signal-demo3></app-signal-demo3>
 <app-assignment-8></app-assignment-8>
+<app-form-demo1></app-form-demo1>
+<app-form-demo2></app-form-demo2>
+<app-form-demo3></app-form-demo3>
