--- a/first-angular/src/app/components/signal-demo3/signal-demo3.component.html
+++ b/first-angular/src/app/components/signal-demo3/signal-demo3.component.html
@@ -10,10 +10,11 @@
 
   <div class="card text-center m-2 p-2">
     <div class="card-body">
-      <h5 class="card-title">{{ userData.userName }}</h5>
-      <p class="card-text">{{ userData.email }}</p>
-      <p class="card-text">{{ userData.phone }}</p>
-      <p class="card-text text-truncate">{{ userData.address.city }}</p>
+      <h5 class="card-title">{{ userData?.userName }}</h5>
+      <!-- ?  means optional chaining operator-->
+      <p class="card-text">{{ userData?.email }}</p>
+      <p class="card-text">{{ userData?.phone }}</p>
+      <p class="card-text text-truncate">{{ userData?.address?.city }}</p>
 
       <a href="#" class="btn btn-success">Details</a>
     </div>
