--- a/first-angular/src/app/components/body/body.component.html
+++ b/first-angular/src/app/components/body/body.component.html
@@ -3,7 +3,6 @@
 <!-- <app-directives></app-directives> -->
 <!-- <app-assignment2 /> -->
 <!-- <app-products></app-products> -->
-<!-- <app-iplplayers></app-iplplayers> -->
 <!-- <app-my-modal></app-my-modal> -->
 <app-my-modal2>
   <h3>Prabahas Salaar</h3>
@@ -25,11 +24,11 @@
 <!-- <app-assignment6></app-assignment6> -->
 <!-- <app-http-demo></app-http-demo> -->
 <!-- <app-assignment7></app-assignment7> -->
-<!-- <app-http-demo2></app-http-demo2> -->
+<app-http-demo2></app-http-demo2>
 <!-- <app-observable-demo1></app-observable-demo1> -->
 <!-- <app-observable-demo2></app-observable-demo2> -->
 <!-- <app-observable-demo3></app-observable-demo3> -->
-<!-- <app-observable-demo4></app-observable-demo4> -->
+<app-observable-demo4></app-observable-demo4>
 <div class="border p-2 m-2">
   <h4 class="text-center">Observables and Subjects</h4>
   <div class="row">
@@ -44,11 +43,11 @@
     </div>
   </div>
 </div>
-<app-subject-demo1></app-subject-demo1>
-<app-signal-demo1></app-signal-demo1>
-<app-signal-demo2></app-signal-demo2>
-<app-signal-demo3></app-signal-demo3>
-<app-assignment-8></app-assignment-8>
+<!-- <app-subject-demo1></app-subject-demo1> -->
+<!-- <app-signal-demo1></app-signal-demo1> -->
+<!-- <app-signal-demo2></app-signal-demo2> -->
+<!-- <app-signal-demo3></app-signal-demo3> -->
+<!-- <app-assignment-8></app-assignment-8> -->
 <app-form-demo1></app-form-demo1>
 <app-form-demo2></app-form-demo2>
-<app-form-demo3></app-form-demo3>
+<!-- <app-form-demo3></app-form-demo3> -->
