--- a/first-angular/src/app/app.component.html
+++ b/first-angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar />
-<app-categories />
-<app-carousel />
+<!-- <app-categories /> -->
+<!-- <app-carousel /> -->
 <app-body />
 <app-footer />
