--- a/first-angular/src/app/components/navbar/navbar.component.html
+++ b/first-angular/src/app/components/navbar/navbar.component.html
@@ -15,17 +15,58 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">HOME</a>
+      <li class="nav-item">
+        <!-- <a class="nav-link" href="#">HOME</a> -->
+        <a class="nav-link" routerLink="home" routerLinkActive="active">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">MATCHES</a>
+        <!-- <a class="nav-link" href="#">MATCHES</a> -->
+        <a class="nav-link" routerLink="aboutus" routerLinkActive="active"
+          >About US</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">POINTS TABLE</a>
+        <!-- <a class="nav-link" href="#">POINTS TABLE</a> -->
+        <a class="nav-link" routerLink="careers" routerLinkActive="active"
+          >Careers</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">TEAMS</a>
+        <!-- <a class="nav-link" href="#">TEAMS</a> -->
+        <a class="nav-link" routerLink="contactus" routerLinkActive="active"
+          >Contact US</a
+        >
+      </li>
+      <li class="nav-item">
+        <!-- <a class="nav-link" href="#">TEAMS</a> -->
+        <a class="nav-link" routerLink="users" routerLinkActive="active"
+          >Users</a
+        >
+      </li>
+      <li class="nav-item">
+        <!-- <a class="nav-link" href="#">TEAMS</a> -->
+        <a class="nav-link" routerLink="products" routerLinkActive="active"
+          >Products</a
+        >
+      </li>
+      <li class="nav-item">
+        <!-- <a class="nav-link" href="#">TEAMS</a> -->
+        <a class="nav-link" routerLink="javascript" routerLinkActive="active"
+          >Javascript</a
+        >
+      </li>
+      <!-- hide a link which is not secure, we are hiding the link but not protecting -->
+      <!--@if(userRole === 'teacher'){
+      <li class="nav-item">
+        <a class="nav-link" routerLink="managevideos" routerLinkActive="active"
+          >Manage Videos</a
+        >
+      </li>
+    }-->
+      <li class="nav-item">
+        <a class="nav-link" routerLink="managevideos" routerLinkActive="active"
+          >Manage Videos</a
+        >
       </li>
     </ul>
   </div>
